# Pencil-Producer

./: CMakeLists.txt  README.md  references.json
doc/: dconfig
doc/html/: annotated.html  class_main_window-members.html  class_main_window.html  class_pencil-members.html  class_pencil.html  class_production-members.html  class_production.html  class_start_form-members.html  class_start_form.html  class_wallet-members.html  class_wallet.html  classes.html  classscores-members.html  classscores.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_ui.html  namespaces.html  pencil_8cpp.html  pencil_8h.html  pencil_8h_source.html  production_8cpp.html  production_8h.html  production_8h_source.html  scores_8cpp.html  scores_8h.html  scores_8h_source.html  startform_8cpp.html  startform_8h.html  (+4 more)
doc/latex/: annotated.tex  class_main_window.eps  class_main_window.tex  class_pencil.eps  class_pencil.tex  class_production.eps  class_production.tex  class_start_form.eps  class_start_form.tex  class_wallet.eps  class_wallet.tex  classscores.eps  classscores.tex  files.tex  hierarchy.tex  main_8cpp.tex  mainwindow_8cpp.tex  mainwindow_8h.tex  (+13 more)
save/: data.save
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pencil.cpp  pencil.h  production.cpp  production.h  scores.cpp  scores.h  scores.ui  startform.cpp  startform.h  startform.ui  wallet.cpp  wallet.h
test/: tests.cpp
(+35 files in other folders)
